fix: logo on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,10 @@ h6,
 }
 
 @media (max-width: 991.98px) {
+  .navbar-brand img {
+    width: 100%;
+  }
+
   .sticky-top.navbar-dark {
     position: relative;
     background: #ffffff;
